manifests/networking/pihole/base/deployment.yaml
# Copyright (C) 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: pihole
  labels:
    k8s-app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: pihole
  template:
    metadata:
      labels:
        k8s-app: pihole
    spec:
      serviceAccountName: pihole
      containers:
        - name: pihole
          image: pihole/pihole:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: "dns-tcp"
              containerPort: 53
              protocol: "TCP"
            - name: "dns-udp"
              containerPort: 53
              protocol: "UDP"
            - name: "http"
              containerPort: 80
          securityContext:
            capabilities:
              add:
                - "NET_ADMIN"
          volumeMounts:
            - name: pihole-config
              mountPath: "/etc/pihole"
          livenessProbe:
            httpGet:
              path: /admin.index.php
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /admin/index.php
              port: 80
            initialDelaySeconds: 25
            periodSeconds: 5
      volumes:
        - name: pihole-config
          persistentVolumeClaim:
            claimName: pihole
